--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
   	<header>
   		<nav>
   			<ul class="main-nav-list text-tall text-bold">
-	          <li><a class="link" href="#">Информация</a></li>
-	          <li><a class="link" href="#">Фото и Видео</a></li>
-	          <li><a class="logo" href=""></a></li> <!-- не получается добавить изображение -->
-	          <li><a class="link" href="#">Карта штата</a></li>
-	          <li><a class="link" href="catalog.html">Гостиницы</a></li>
+	          <li><a class="link-unmarked text-black" href="#">Информация</a></li>
+	          <li><a class="link-unmarked text-black" href="#">Фото и Видео</a></li>
+	          <li class="logo"><a href="index.html"></a></li>
+	          <li><a class="link-unmarked text-black" href="#">Карта штата</a></li>
+	          <li><a class="link-unmarked text-black" href="catalog.html">Гостиницы</a></li>
         	</ul>
   		</nav>
   	</header>
@@ -84,7 +84,7 @@
   	</main>
   	<footer class="main-footer text-tall text-black text-uppercase">
       <h2 class="visually-hidden">Контакты</h2>
-      <p class="subtitle">#VISITSEDONA<br>ТЕЛ:<a class="link" href="tel:+79656660166">+7(965) 666-01-66</a></p>
+      <p class="subtitle">#VISITSEDONA<br>ТЕЛ:<a class="link-unmarked text-black" href="tel:+79656660166">+7(965) 666-01-66</a></p>
       <h2 class="visually-hidden">Соц. сети</h2>
       <ul class="list-unmarked">
         <li>
