--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
   	</header>
   	<main>
   		<div class="header-images"><h1 class="visually-hidden">Туристический город Седона</h1>
-        <img class="img-bg-blue" src="img/bg_sedona_landscape.jpg" alt="Пейзаж Седоны" width="1200" height="509">
+        	<img class="img-bg-blue" src="img/bg_sedona_landscape.jpg" alt="Пейзаж Седоны" width="1200" height="509">
     		<img class="img-bg-white" src="img/welcome.svg" alt="Добро пожаловать" width="187" height="44">
-        <img class="img-bg-white" src="img/gorgeous.svg" alt="в великолепную" width="255" height="28">
-        <img class="img-bg-white" src="img/sedona.svg" alt="Седону" width="456" height="213">
-        <div class="header-bg-cut"></div> <!-- для картинки - срезки фона --> <!-- не получается добавить изображение -->
+	        <img class="img-bg-white" src="img/gorgeous.svg" alt="в великолепную" width="255" height="28">
+	        <img class="img-bg-white" src="img/sedona.svg" alt="Седону" width="456" height="213">
+	        <div class="header-bg-cut"></div> <!-- для картинки - срезки фона --> <!-- не получается добавить изображение -->
     		<p class="subtitle text-tall text-black">Седона - небольшой городок в Аризоне, заслуживающий Большего!</p>
     		<p class="text-tall text-uppercase">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
-      </div>
-  		<h2 class="visually-hidden">5 преимуществ Седоны</h2>
+      	</div>
   		<section class="feature text-uppercase">
+  			<h2 class="visually-hidden">5 преимуществ Седоны</h2>
   			<div class="img-bg-blue text-low text-white">
   				<h2 class="subtitle">Настоящий<br>городок</h2>
 	  			<p>-№1-<br>Седона - не аттракциона для туристов, там течет своя жизнь</p>
@@ -55,9 +55,9 @@
   			</ul>
   		</section>
   		<section class="feature img-bg-blue text-low text-white">
-          <img class="img-bg-hover-blue" src="img/devils_bridge.jpg" alt="Мост Дьявола" width="800" height="256">
-    			<h2 class="subtitle">Там есть<br>Мост Дьявола</h2>
-    			<p>-№2-<br>Да, по нему можно пройти! Если конечно Вы осмелитесь</p>
+        	<img class="img-bg-hover-blue" src="img/devils_bridge.jpg" alt="Мост Дьявола" width="800" height="256">
+			<h2 class="subtitle">Там есть<br>Мост Дьявола</h2>
+			<p>-№2-<br>Да, по нему можно пройти! Если конечно Вы осмелитесь</p>
   		</section>
   		<section class="feature-list text-uppercase">
   			<ul class="text-low list-unmarked">
@@ -83,28 +83,19 @@
   		</section>
   	</main>
   	<footer class="main-footer text-tall text-black text-uppercase">
-      <h2 class="visually-hidden">Контакты</h2>
-      <p class="subtitle">#VISITSEDONA<br>ТЕЛ:<a class="link-unmarked text-black" href="tel:+79656660166">+7(965) 666-01-66</a></p>
-      <h2 class="visually-hidden">Соц. сети</h2>
-      <ul class="list-unmarked">
-        <li>
-          <a class="social-button twitter-button" href="#">
-          </a>
-        </li>
-        <li>
-          <a class="social-button facebook-button" href="#">
-          </a>
-        </li>
-        <li>
-          <a class="social-button youtube-button" href="#">
-          </a>
-        </li>
-      </ul>
-      <h2 class="visually-hidden">Copyright</h2>
-      <p>WEBSITE BY</p>
-      <a href="htmlacademy.ru">
-      	<img src="img/htmlacademy_logo.svg" alt="Логотип HTMLAcademy" width="115" height="41"> <!-- здесь пока тоже не понял, как сделать состояния -->
-      </a>
+        <h2 class="visually-hidden">Контакты</h2>
+        <p class="subtitle">#VISITSEDONA<br>ТЕЛ:<a class="link-unmarked text-black" href="tel:+79656660166">+7(965) 666-01-66</a></p>
+        <h2 class="visually-hidden">Соц. сети</h2>
+        <ul class="list-unmarked">
+            <li><a class="social-button twitter-button" href="#"></a></li>
+            <li><a class="social-button facebook-button" href="#"></a></li>
+            <li><a class="social-button youtube-button" href="#"></a></li>
+        </ul>
+        <h2 class="visually-hidden">Copyright</h2>
+        <p>WEBSITE BY</p>
+        <a href="htmlacademy.ru">
+            <img src="img/htmlacademy_logo.svg" alt="Логотип HTMLAcademy" width="115" height="41"> <!-- здесь не понял, как сделать состояния -->
+        </a>
     </footer>
   </body>
 </html>
