--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body class="page-body">
   	<header>
   		<nav>
-  			<ul class="main-nav-list text-tall text-bold">
+  			<ul class="main-nav-list">
 	          <li><a class="link-unmarked text-black" href="#">Информация</a></li>
 	          <li><a class="link-unmarked text-black" href="#">Фото и Видео</a></li>
 	          <li class="logo"><a href="index.html"></a></li>
@@ -29,10 +29,10 @@
 	        <img class="img-bg-white" src="img/gorgeous.svg" alt="в великолепную" width="255" height="28">
 	        <img class="img-bg-white" src="img/sedona.svg" alt="Седону" width="456" height="213">
 	        <div class="header-bg-cut"></div> <!-- для картинки - срезки фона --> <!-- не получается добавить изображение -->
-    		<p class="subtitle text-tall text-black">Седона - небольшой городок в Аризоне, заслуживающий Большего!</p>
-    		<p class="text-tall text-uppercase">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
+    		<p class="description">Седона - небольшой городок в Аризоне,<br> заслуживающий Большего!</p>
+    		<p class="description-features">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
       	</div>
-  		<section class="feature text-uppercase">
+  		<section class="feature">
   			<h2 class="visually-hidden">5 преимуществ Седоны</h2>
   			<div class="img-bg-blue text-low text-white">
   				<h2 class="subtitle">Настоящий<br>городок</h2>
